# plugdata-modify

./: .gitignore  README.md
Abstractions/heavylib/: drive~.pd  overdrive~.pd  pdnam~-heavy.pd  popmenu.pd  softclip~.pd
hvcc/: CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  tox.ini
hvcc/docs/: index.md  mkdocs_hooks.py
hvcc/docs/adr/: ADR-005-PDNAM-External.md  ADR-006-gui2dpf-Templates.md  index.md
hvcc/docs/generators/: custom.md  daisy.md  daisy_json.md  dpf.md  index.md  javascript.md  pdext.md  unity.md  wwise.md
hvcc/docs/getting-started/: index.md  (+1 more)
hvcc/hvcc/: compiler.py  main.py
hvcc/tests/: test_control.py  test_control_expr.py  test_midi.py  test_signal.py  test_signal_cyclone.py  test_signal_expr.py  test_speed.py  test_speed_avx.py
lib/pdvg/: ARCHITECTURE.md  LICENSE  README.md  TODO.md  pdvg.hpp
plugdata/: CMakeLists.txt  README.md
plugdata/Libraries/: CMakeLists.txt
plugdata/Libraries/Gem/abstractions/: gemdefaultwindow.pd
plugdata/Libraries/Gem/src/Gem/: GemGLconfig.h
plugdata/Libraries/JUCE/modules/juce_audio_basics/midi/: juce_MidiMessage.cpp
plugdata/Libraries/JUCE/modules/juce_audio_devices/native/: juce_WASAPI_windows.cpp
plugdata/Libraries/JUCE/modules/juce_audio_utils/gui/: juce_MidiKeyboardComponent.cpp  juce_MidiKeyboardComponent.h
plugdata/Libraries/JUCE/modules/juce_core/containers/: juce_Array.h  juce_ArrayBase.h
plugdata/Libraries/JUCE/modules/juce_core/files/: juce_File.cpp
plugdata/Libraries/JUCE/modules/juce_core/maths/: juce_Expression.cpp  juce_NormalisableRange.h
plugdata/Libraries/JUCE/modules/juce_core/memory/: juce_WeakReference.h
plugdata/Libraries/JUCE/modules/juce_core/native/: juce_SharedCode_posix.h
plugdata/Libraries/JUCE/modules/juce_core/network/: juce_URL.cpp  juce_URL.h
plugdata/Libraries/JUCE/modules/juce_core/text/: juce_String.cpp
plugdata/Libraries/JUCE/modules/juce_core/threads/: juce_ChildProcess.h
plugdata/Libraries/JUCE/modules/juce_events/native/: juce_Messaging_linux.cpp
plugdata/Libraries/JUCE/modules/juce_graphics/colour/: juce_Colour.cpp
plugdata/Libraries/JUCE/modules/juce_graphics/detail/: juce_SimpleShapedText.cpp
plugdata/Libraries/JUCE/modules/juce_graphics/fonts/: juce_AttributedString.cpp  juce_AttributedString.h
plugdata/Libraries/JUCE/modules/juce_graphics/geometry/: juce_Path.cpp
plugdata/Libraries/JUCE/modules/juce_gui_basics/: juce_gui_basics.cpp  juce_gui_basics.h
plugdata/Libraries/JUCE/modules/juce_gui_basics/commands/: juce_ApplicationCommandInfo.h  juce_KeyPressMappingSet.cpp  juce_KeyPressMappingSet.h
plugdata/Libraries/JUCE/modules/juce_gui_basics/components/: juce_Component.cpp  juce_Component.h
plugdata/Libraries/JUCE/modules/juce_gui_basics/drawables/: juce_DrawableShape.h
plugdata/Libraries/JUCE/modules/juce_gui_basics/layout/: juce_Viewport.cpp
plugdata/Libraries/JUCE/modules/juce_gui_basics/lookandfeel/: juce_LookAndFeel.cpp  juce_LookAndFeel.h
plugdata/Libraries/JUCE/modules/juce_gui_basics/mouse/: juce_ComponentDragger.cpp  juce_ComponentDragger.h  juce_DragAndDropContainer.cpp  juce_MouseInputSource.cpp  juce_MouseInputSource.h
plugdata/Libraries/JUCE/modules/juce_gui_basics/native/: juce_FileChooser_ios.mm  juce_MultiTouchMapper.h  juce_UIViewComponentPeer_ios.mm  juce_WaylandSymbols.cpp  juce_WaylandSymbols.h  juce_WaylandWindowSystem.cpp  juce_WaylandWindowSystem.h  juce_Windowing_wayland.cpp  juce_Windowing_x11.cpp  juce_XSymbols_linux.cpp  juce_XSymbols_linux.h  juce_XWindowSystem_linux.cpp  juce_XWindowSystem_linux.h
plugdata/Libraries/JUCE/modules/juce_gui_basics/widgets/: juce_TextEditor.cpp
plugdata/Libraries/JUCE/modules/juce_gui_basics/windows/: juce_CallOutBox.cpp  juce_TooltipWindow.cpp  juce_TopLevelWindow.cpp
plugdata/Libraries/JUCE/modules/juce_gui_extra/native/: juce_SystemTrayIcon_linux.cpp  juce_UIViewComponent_ios.mm
plugdata/Libraries/JUCE/modules/juce_opengl/: juce_opengl.cpp
plugdata/Libraries/JUCE/modules/juce_opengl/native/: juce_OpenGL_android.h  juce_OpenGL_ios.h  juce_OpenGL_mac.h  juce_OpenGL_wayland.h  juce_OpenGL_windows.h  juce_OpenGL_x11.h
plugdata/Libraries/JUCE/modules/juce_opengl/opengl/: juce_OpenGLContext.cpp  juce_OpenGLContext.h
plugdata/Libraries/nanovg/src/: fontstash.h  nanovg.cpp  nanovg.h  nanovg_gl.h  nanovg_gl_utils.h  nanovg_mtl.h  nanovg_mtl.m  nanovg_mtl_shaders.metal  stb_truetype.h
plugdata/Libraries/nanovg/src/mnvg_bitcode/: ios.h  macos.h  macos.metallibsym  simulator.h  tvos.h
plugdata/Libraries/nanovg/tools/: metallib
plugdata/Libraries/pd-else/Source/Control/: knob.c
plugdata/Libraries/pd-lua/: pd.lua  pdlua-help.pd  pdlua.c  pdlua.h  pdlua_gfx.h  pdlua_properties.h
plugdata/Libraries/pd-lua/luas/: generate_compat53_headers.sh  lua.c  luajit.c
plugdata/Libraries/pd-lua/luas/lua-compat-headers/: compat53_file_mt.h  compat53_init.h  compat53_module.h
plugdata/Libraries/pd-lua/pdlua/examples/: props.pd_lua
plugdata/Libraries/pd-pdnam/: CHANGELOG.md  Makefile  README.md  pdnam+~-help.pd  pdnam+~.cpp  pdnam+~.pd_linux  pdnam~-help.pd  pdnam~.cpp  pdnam~.pd_linux
plugdata/Libraries/pd-pdnam/data/: MESA.nam  Tomato_Preamp_Maximum_Gain.aidax
plugdata/Libraries/pd-pdnam/dep/MicroNAM/: LICENSE  MicroNAM.h  README.md  nam_to_header.py
plugdata/Libraries/pd-pdnam/dep/MicroNAM/include/: FeatherNet.h  LiteNet.h  NanoNet.h  StandardNet.h
plugdata/Libraries/pd-pdnam/dep/NeuralAudio/NeuralAudio/: RTNeuralModel.h
plugdata/Libraries/pure-data/src/: g_all_guis.h  g_array.c  g_canvas.c  g_clone.c  g_editor.c  g_graph.c  g_mycanvas.c  g_readwrite.c  g_rtext.c  g_scalar.c  g_template.c  g_text.c  g_toggle.c  m_pd.c  m_pd.h  s_inter.c  s_main.c  x_text.c
plugdata/Source/: Canvas.cpp  Canvas.h  CanvasViewport.h  Connection.cpp  Connection.h  Constants.h  Iolet.cpp  Iolet.h  LookAndFeel.cpp  LookAndFeel.h  NVGSurface.cpp  NVGSurface.h  Object.cpp  ObjectGrid.cpp  PluginEditor.cpp  PluginEditor.h  PluginMode.h  PluginProcessor.cpp  PluginProcessor.h  Statusbar.cpp  Statusbar.h  TabComponent.cpp  TabComponent.h  Toolbar.cpp  Toolbar.h
(+331 files in other folders)
